# FFcuesplitter

./: .flake8  .gitignore  AUTHORS  BUGS  CHANGELOG  MANIFEST.in  README.md  TODO  ffcuesplitter.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  python-app.yml
debian/: README.Debian  changelog  control  copyright  rules
ffcuesplitter/: about.py  cue_parser.py  cuesplitter.py  datastrings.py  exceptions.py  ffmpeg.py  ffprobe.py  ffprobe_parser.py  info.py  main.py  str_utils.py  user_service.py  utils.py
tests/: 02 - 400 Hz.flac  03 - 500 Hz.flac  1 - 300 Hz.flac  Three Samples.flac  Three Samples_ASCII.cue  Three Samples_ISO-8859-1.cue  test.py
tests/Bob Dylan - Street Legal/: Street_Legal.cue
tests/prove/: Three Samples.flac  Three Samples_ASCII.cue  miofile.cue  po.py  po3.py
